Primer POST,PUT,DELETE ja funcionen
