# api/openapi.yaml
@@ -11,7 +11,7 @@ security:
 
 servers:
   # - url: 'https://fast-falls-50985.herokuapp.com/'
-  - url: 'http://3.238.108.74:8080'
+  - url: 'http://3.239.44.53:8080'
 
 paths:
   /api/contributions:
@@ -33,37 +33,34 @@ paths:
     post:
       tags:
       - Contributions
-      description: Afegeix una contribució establint el seu tipus segons el paràmetres que es passin amb la crida.
-      parameters:
-      - name: title
-        in: header
-        description: Títol de la contribució
+      description: Afegeix una nova contribució
+      requestBody:
+        description: Titol, autor, url i text de la contribució
+        content:
+          application/json:
+            schema:
+              required:
+              - title
+              - url
+              - text
+              type: object
+              properties:
+                title:
+                  type: string
+                url:
+                  type: string
+                text:
+                  type: string
         required: true
-        schema:
-          type: string
-      - name: url
-        in: header
-        description: Url de la contribució de tipus url
-        required: false
-        schema:
-          type: string
-      - name: text
-        in: header
-        description: Text de la contribució
-        required: false
-        schema:
-          type: string
       responses:
-        200:
-          description: successful operation
+        201:
+          description: Tweet created
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Contribution'
+                $ref: '#/components/schemas/AddContributionResult'
         400:
-          description: 'Error: url or text must be set correctly'
+          description: 'Error: Bad Request'
           content:
             application/json:
               schema:
@@ -128,6 +125,95 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResult'
+    
+  /api/contributions/{id}:
+    delete:
+        tags:
+        - Contributions
+        description: Esborra la contribució
+        parameters:
+        - name: id
+          in: path
+          description: ID de la contribució a esborrar
+          required: true
+          schema:
+            type: integer
+            format: int
+        responses:
+          204:
+            description: Contribution esborrat
+            content:
+              application/json: {}
+          404:
+            description: 'Error: Not Found'
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/ErrorResult'
+          401:
+            description: 'Error: Unauthorized'
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/ErrorResult'
+          403:
+            description: 'Error: Forbidden'
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/ErrorResult'
+        
+    put:
+      tags:
+      - Contributions
+      description:
+        Edita la informació d'una contribució
+      parameters:
+        - name: id
+          in: path
+          description: ID de la contribució a retornar.
+          required: true
+          schema:
+            type: integer
+            format: int
+      requestBody:
+        description: Titol, autor, url i text de la contribució
+        content:
+          application/json:
+            schema:
+              required:
+              - title
+              - text
+              type: object
+              properties:
+                title:
+                  type: string
+                text:
+                  type: string
+        required: true
+      responses:
+        200:
+          description: successful update
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Contribution'
+        401:
+            description: 'Error: Unauthorized'
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/ErrorResult'
+        403:
+            description: 'Error: Forbidden'
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/ErrorResult'
+
+
+                
+  
   
   /api/contributions/comments/{id}:
     get:
@@ -265,6 +351,12 @@ components:
           type: string
         points:
           type: integer
+          
+    AddContributionResult:
+      type: object
+      properties:
+        new_contribution:
+          $ref: '#/components/schemas/Contribution'
           
     Comment:
       type: object
